Updated form and tested java form funcionality

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <p>Enter Combination:</p>
       <section>
         <form>
-          <input type="text" name="Combo1">
-          <input type="text" name="Combo2">
-          <input type="text" name="Combo3">
+          <input type="number" name="Combo1" required>
+          <input type="number" name="Combo2" required>
+          <input type="number" name="Combo3" required>
 
           <input type="submit" value="submit">
         </form>
