--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
       <img src="./images/Lock1.jpg" alt="A black lock on a white background"/>
       <p>Enter Combination:</p>
       <section>
-        <form>
-          <input type="number" name="Combo1" required>
-          <input type="number" name="Combo2" required>
-          <input type="number" name="Combo3" required>
+        <form name="Lock">
+          <input type="text" name="Combo1" id="Combo1" required>
+          <input type="number" name="Combo2" id="Combo2" required>
+          <input type="number" name="Combo3" id="Combo3" required>
 
-          <input type="submit" value="submit">
+          <input type="submit" value="submit" onclick="validateForm()">
         </form>
      </section>
    </main>
