Added image to success page

--- a/success.html
+++ b/success.html
@@ -7,6 +7,7 @@
   <body>
     <main>
       <h2>Success, you opened the lock!</h2>
+      <img id="gif" src="./images/thumbsup.gif" alt="Gif of a sheep giving thumbs up"/>
     </main>
   </body>
 </html>
